# hazelcast-dissector-for-wireshark

./: .gitignore  CMakeLists.txt  README.md  packet-hazelcast.c  packet-hazelcast.h  packet.diag  protocol_notes.md
.github/: dependabot.yml
.github/workflows/: pr-builder.yaml  release-latest-snapshot-linux.yaml  upload-release.yaml
imgs/: dataserializable.diag  heapdata.diag  identifieddataserializable.diag  packet.diag
